Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
 <!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>
+      It is raining
+    </title>
+  </head>
+  
+  <body>
+    <p>
+      
+      Rain drops keep falling on my head
+    </p>
+    
+  </body>
+</html>
